<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tv_cost_maintain"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/cost_maintain"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"/>
        <Spinner
            android:id="@+id/num_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/num_date"
            android:layout_marginLeft="10dp">
        </Spinner>
        <Spinner
            android:id="@+id/num_person"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/num_person"
            android:layout_marginLeft="10dp">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignTop="@+id/cost"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/tv_reward"
            android:textSize="18sp"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/reward"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            />
        <RadioButton
            android:id="@+id/incity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_incity"
            android:textSize="16sp"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            />
        <RadioButton
            android:id="@+id/tocounty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rb_tocounty"
            android:textSize="16sp"
            android:layout_weight="0.5"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
