<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
  >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/routeanalysis"
    android:fitsSystemWindows="true">
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_user_mode"
                    android:textSize="18sp" />
                <Button
                    android:id="@+id/btn_manager_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="manager_mode"
                    android:text="@string/manager_mode"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_worker_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="worker_mode"
                    android:text="@string/worker_mode"
                    android:textSize="18sp" />
            </LinearLayout>
      </RelativeLayout>
<android.support.design.widget.NavigationView
android:id="@+id/navigationView"
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="left"
android:fitsSystemWindows="true"
android:scrollbars="none"
app:headerLayout="@layout/head_view"
app:menu="@menu/menu_navigation_main" />
</android.support.v4.widget.DrawerLayout>